# pyfax

./: ++version.py  .gitignore  .readthedocs.yml  CHANGELOG.md  CHANGELOG_SINCE_LAST_VERSION.md  README.md  codemeta.json  pyproject.toml  setup.cfg  setup.py
.github/scripts/: coveralls_check.py  prepare_release.py  trigger_rtd_build.py  version.py
.github/workflows/: check-version-numbers.yml  coveralls.yml  push-packages.yml  run-tests.py  run-tests.yml  style-checks.yml  test-packages.yml  version.yml
docs/: conf.py  index.rst
pyfax/: __init__.py  _config.py  page.py  version.py
pyfax/pages/: __init__.py  test_page.py
pyfax/tools/: url_helpers.py
test/: test_config.py  test_import.py  test_page_output.py  test_pages.py  test_tools.py
test/data/: csv.csv  json.json
