[build-system]
build-backend = "flit_core.buildapi"
requires = ["flit_core >=3.8.0,<4"]

[project]
name = "pyfax"
version = "2024.2.8"
description = "a Python library for generating teletext tti files"
readme = "README.md"
requires-python = ">=3.8.0"
license = { file = "LICENSE" }
authors = [
    { name = "Matthew Scroggs", email = "pyfax@mscroggs.co.uk" }
]
packages = ["pyfax", "pyfax.pages", "pyfax.tools"]
dependencies = ["requests", "feedparser"]

[project.urls]
homepage = "https://github.com/mscroggs/pyfax"
repository = "https://github.com/mscroggs/pyfax"
documentation = "https://pyfax.readthedocs.io/en/latest/"

[project.optional-dependencies]
style = ["ruff", "flake8", "mypy", "isort"]
docs = ["sphinx", "sphinx-autoapi"]
test = ["pytest"]

[tool.ruff]
line-length = 100

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
ignore_missing_imports = true

[tool.isort]
line_length = 100
